--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "empty-epsilon-js": "1.0.0",
+    "naming": "^1.0.6",
     "osc": "^2.2.0",
     "rxjs": "^5.5.6"
   }
