--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf ./dist",
     "build": "tsc -d",
     "pretest": "npm run clean && npm run build",
-    "reset": "rimraf node_modules dist && yarn install && yarn test",
+    "reset": "rimraf node_modules dist && npm install && npm test",
     "test": "mocha --require test-setup.js --reporter list \"dist/test/**/*.spec.js\""
   },
   "repository": {
@@ -28,23 +28,24 @@
   "homepage": "https://github.com/CommaSword/open-epsilon#readme",
   "devDependencies": {
     "@types/chai": "~4.0.4",
-    "@types/mocha": "~2.2.41",
+    "@types/mocha": "^5.2.7",
     "@types/node": "8.0.33",
     "@types/sinon": "~2.3.1",
     "@types/sinon-chai": "^2.7.29",
     "chai": "~4.1.2",
-    "mocha": "3.2.0",
+    "mocha": "^6.2.0",
     "rimraf": "~2.6.1",
     "sinon": "~2.3.5",
     "sinon-chai": "^2.14.0",
-    "ts-node": "4.1.0",
-    "tslib": "1.8.1",
-    "typescript": "2.6.2"
+    "ts-node": "10.0.0",
+    "tslib": "^2.3.0",
+    "typescript": "4.3.5"
   },
   "dependencies": {
-    "empty-epsilon-js": "1.0.2",
+    "empty-epsilon-js": "2.0.1",
+    "kissfs": "^0.7.1",
     "naming": "^1.0.6",
-    "osc": "^2.2.0",
+    "osc": "^2.4.1",
     "rxjs": "^5.5.6"
   }
 }
