--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "kissfs": "^0.7.1",
     "naming": "^1.0.6",
     "osc": "^2.4.1",
-    "rxjs": "^5.5.6"
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3"
   }
 }
